--- a/src/Exemplo.Web/Views/Home/Index.cshtml
+++ b/src/Exemplo.Web/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model ClienteViewModel
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -12,30 +13,44 @@
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 
-<div class="alert alert-dismissible fade" role="alert" id="alert">
-    <strong id="messageType"></strong><br />
-    <span id="message"></span>
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-    </button>
-</div>
-<div class="card p-4 mb-4">
-
-    <form class="form-inline d-flex">
-        <input type="hidden" id="id" />
-        <div class="form-group flex-fill">
-            <input type="text" class="form-control" id="nome" placeholder="Nome">
+<div class="card">
+    <div class="card-body">
+        <div class="alert alert-dismissible fade" role="alert" id="alert">
+            <strong id="messageTitle"></strong>
+            <span id="message"></span>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
         </div>
-        <div class="form-group flex-fill">
-            <input type="number" class="form-control" id="cpf" placeholder="CPF">
-        </div>
-        <button type="button" class="btn btn-sm btn-success flex-fill" id="btnSalvar">Salvar</button>
-        <button type="button" class="btn btn-sm btn-primary ml-3 flex-fill" id="btnNovo">Novo</button>
-    </form>
-    
+
+        <form id="form">
+            <input type="hidden" id="Id" />
+            <div class="row">
+                <div class="col-6">
+                    <div class="form-group">
+                        <input asp-for="Nome" class="form-control" placeholder="Nome" />
+                        <span asp-validation-for="Nome" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="form-group">
+                        <input asp-for="Cpf" class="form-control" placeholder="CPF" />
+                        <span asp-validation-for="Cpf" class="text-danger"></span>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 d-flex justify-content-end">
+                    <button type="button" class="btn btn-sm btn-success mr-3" id="btnSalvar">Salvar</button>
+                    <button type="button" class="btn btn-sm btn-primary" id="btnNovo">Novo</button>
+                </div>
+            </div>
+
+        </form>
+    </div>
 </div>
 
-<table id="table"
+<table id="table" class="mt-4"
        data-toggle="table"
        data-url="@Url.Action("BuscarDados","Home")"
        data-side-pagination="server"
