--- a/src/Exemplo.Web/wwwroot/src/scss/home.scss
+++ b/src/Exemplo.Web/wwwroot/src/scss/home.scss
@@ -11,6 +11,10 @@
     border-color: indianred
 }
 
-h2{
-    color:orange;
+.field-validation-valid{
+    display: none;
+}
+
+h2 {
+    color: orange;
 }
