--- a/src/Exemplo.Web/Views/Shared/_Layout.cshtml
+++ b/src/Exemplo.Web/Views/Shared/_Layout.cshtml
@@ -19,10 +19,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Index jQuery</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">jQuery</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index2">Index Vue.js</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index2">Vue.js</a>
                         </li>
                     </ul>
                 </div>
